# golden-paths

./: README.md  Starterfile.yaml  github-repo-creation.py  main.py  pyproject.toml
.github/workflows/: pypi-publish-prod.yml  pypi-publish-test.yml  test-suite.yaml
startout/: env_manager.py  frameworks_api.py  github_api.py  init_option.py  main.py  module.py  paths.py  starterfile.py  tool.py  util.py
tests/: test_env_manager.py  test_github_api.py  test_longrunning_e2e_starterfile_cli.py  test_longrunning_initialize_path_instance.py  test_module.py  test_module_gitmodule.py  test_module_scriptmodule.py  test_module_utilities.py  test_module_with_monitoring.py  test_paths_cli.py  test_paths_integration.py  test_starterfile.py  test_starterfile_cli.py  test_starterfile_env_vars.py  test_starterfile_parser.py  test_starterfile_utilities.py  test_tool.py  test_util.py  test_util_run_script.py
tests/resources/starterfiles/: circular_module_starter.yaml  circular_tool_starter.yaml  example.env  example_starterfile.yaml  non_starter.yaml  starter1.yaml  starter2.yaml
tests/resources/workspaces/complex_starter/: complex.env  complex_starter.yaml
tests/resources/workspaces/environment_variables/: Starterfile.yaml  a.txt  b.txt  c.txt  final.env
tests/resources/workspaces/startersteps/: Starterfile.yaml  Startersteps.md  test.env
