[tool.poetry]
name = "startout"
version = "0.1.0"
description = "Draft version of the StartOut CLI'"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
schema = "^0.7.7"
pyyaml = "^6.0.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


rich = "^13.7.1"
[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

pytest = "^8.2.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startout-paths = "startout.paths:startout_paths_command"
