[tool.poetry]
name = "startout"
version = "0.5.1"
description = "Draft version of the StartOut CLI'"
authors = ["Trenton Yo <askstartout@gmail.com>", "Jake Gehrke <askstartout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12.3"
schema = "^0.7.7"
pyyaml = "^6.0.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
rich = "^13.7.1"
parameterized = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.group.testing.dependencies]
pytest = "^8.3.2"

pytest-cov = "^5.0.0"
parameterized = "^0.9.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startout-paths = "startout.paths:startout_paths_command"
startout-starter = "startout.paths:startout_starter_app"
